# ecs-test

./: .gitignore  README.md
ecs-c/: CMakeLists.txt  CMakePresets.json
ecs-c/source/: allocator.c  allocator.h  main.c  orbitcomponent.c  orbitcomponent.h  orbitsystem.c  orbitsystem.h  profiling.cpp  profiling.h  simd.c  simd.h  transformcomponent.c  transformcomponent.h  world.c  world.h
ecs-cpp/: CMakeLists.txt  CMakePresets.json
ecs-cpp/source/: allocator.hpp  application.cpp  application.hpp  arenaalloc.cpp  arenaalloc.hpp  component.hpp  main.cpp  orbitcomponent.cpp  orbitcomponent.hpp  orbitsystem.cpp  orbitsystem.hpp  profiling.cpp  simd.cpp  stdalloc.cpp  stdalloc.hpp  system.hpp  transformcomponent.cpp  transformcomponent.hpp  world.cpp  world.hpp
ecs-rust/: Cargo.toml
ecs-rust/ecs_rust_derive/: Cargo.toml
ecs-rust/ecs_rust_derive/src/: component.rs  lib.rs
ecs-rust/ecs_rust_types/: Cargo.toml
ecs-rust/ecs_rust_types/src/: lib.rs
ecs-rust/src/: component.rs  main.rs  orbitsystem.rs  system.rs  transformcomponent.rs  world.rs
